# LESS-NOTE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  index.html  package-lock.json  package.json
scripts/: desktop-build.ps1  tauri-bundle.ps1
server/: defaultWorkspace.js  env.js  index.js  workspaceStore.js
src/: App.css  App.tsx  auth.css  boardVisualTweaks.css  calendar.css  cardAccent.css  contextMenu.css  document.css  heading.css  index.css  sidebar.css  table.css  textInteraction.css  textSidebar.css  themeScopes.css  todoDrag.css  workspaceAccount.css  workspaceCornerTools.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/auth/: authClient.ts
src/components/auth/: AuthScreen.tsx
src/components/workspace/: BoardTabs.tsx  CanvasConnectorLayer.tsx  CanvasStrokeSelectionOverlay.tsx  CanvasViewport.tsx  DeleteBoardModal.tsx  DocumentPreviewModal.tsx  FileUploadWarningModal.tsx  NoteTextToolIcon.tsx  RichNoteEditor.tsx  SettingsModal.tsx  TodoRow.tsx  ToolbarIcon.tsx  WorkspaceBoardCard.tsx  WorkspaceBrandMark.tsx  WorkspaceCalendarView.tsx  WorkspaceCornerTools.tsx  WorkspaceSelectionPanels.tsx  WorkspaceSidebar.tsx  (+2 more)
src/types/: mammoth-browser.d.ts
src/workspace/: assetImportController.ts  calendarAutoSync.ts  cardCreationController.ts  cardMutationController.ts  core.ts  documentFiles.ts  interactionController.ts  interactionStartController.ts  noteFormattingController.ts  tableCellController.ts  toolbarToolBuilders.ts  workspaceBoardController.ts  workspaceCardActionsController.ts
(+9 files in other folders)
