[package]
name = "less-note"
version = "0.1.1"
description = "LESS-NOTE desktop shell powered by Tauri"
authors = ["LESS-NOTE"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "less_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rfd = "0.15"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
